# soljar

./: .gitignore  CLAUDE.md  README.md  SOLJAR_V2_SPECIFICATION.md  context.md  package-lock.json  package.json  payment-platform-strategy.md  platform.info  solar-config.json  tailwind.config.ts  tsconfig.json
.github/workflows/: radar.yml  test-anchor.yml  test-web.yml
anchor/: Anchor.toml  Cargo.toml
anchor/programs/soljar/: Cargo.toml
anchor/programs/soljar/src/: currency.rs  error.rs  lib.rs
anchor/programs/soljar/src/instructions/: execute_transaction.rs  mod.rs
anchor/programs/soljar/src/instructions_v2/: deposit.rs  execute_transaction.rs  mod.rs  setup_account.rs
anchor/programs/soljar/src/state/: mod.rs
anchor/programs/soljar/src/state_v2/: account.rs  deposit.rs  invoice.rs  jar.rs  jar_by_id.rs  mod.rs
anchor/tests/: soljar.spec.ts
anchor/tests/specs/: account.setup.v2.spec.ts  deposit.v2.spec.ts
anchor/tests/utils/: helpers_v2.ts  initialize.ts  setup.ts  usdc-cache.ts
public/: site.webmanifest
src/app/: globals.css  layout.tsx  page.tsx  react-query-provider.tsx  robots.ts  sitemap.ts
src/components/: app-sidebar.tsx  auth-guard.tsx  create-user-form.tsx  header.tsx  onboarding-section.tsx  root.tsx  theme-toggle-button.tsx  wallet-button.tsx  withdrawal-dialog.tsx
src/hooks/: use-recent-deposits.ts  use-recent-withdrawals.ts  useAuthGuard.ts
src/providers/: loading-provider.tsx
src/types/: window.d.ts
src/web3/: pda-helper.ts  soljar-auth-provider.tsx  soljar-base-provider.tsx  soljar-data-access.tsx  utils.ts
(+96 files in other folders)
